--- a/web_app/app/templates/index.html
+++ b/web_app/app/templates/index.html
@@ -19,8 +19,12 @@
                     <input type="date" id="date" name="date" required>
                 </div>
                 <div class="form-group">
-                    <label for="description">Date:</label>
+                    <label for="description">Description:</label>
                     <textarea id="description" name="description" rows="4" cols="50"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="rating">Rating (1-5):</label>
+                    <input type="number" id="rating" name="rating" min="1" max="5" required>
                 </div>
                 <button type="submit">Add Named Day</button>
             </form>
@@ -29,7 +33,7 @@
                     <li>
                         <span>{{ named_day.name }} - {{ named_day.date }}</span>
                             {% if named_day.description %}
-                            <p>{{ named_day.description }}</p>
+                                <p>Description: {{ named_day.description }}</p> <!-- Show description -->
                         {% endif %}
                         <form action="{{ url_for('delete_named_day', named_day_id=named_day.id) }}" method="POST" class="delete-form">
                             <button type="submit" class="delete-button">Delete</button>
