--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
         <input type="date" id="date" name="date" required>
         <label for="description">Description:</label>
         <textarea id="description" name="description" required></textarea>
+        <label for="location">location:</label>
+        <input id="name" type="text" name="location" required>
         <button type="submit">Add Holiday</button>
     </form>
     <div id="tooltip" class="tooltip"></div>
@@ -36,49 +38,32 @@
                 <div class="calendar-day">{{ day }}</div>
             {% endif %}
         {% endfor %}
-    </div>
-    <div id="calendar">
-        {% if search_results %}
-        <h2>Search Results:</h2>
-        {% for holiday in search_results %}
-        <div class="holiday">
-            <h4>{{ holiday.name }}</h4>
-            <p>Date: {{ holiday.date }}</p>
-            <p>Description: {{ holiday.description }}</p>
-        </div>
-        {% endfor %}
-        {% elif filtered_holidays %}
-        <h2>Filtered Holidays:</h2>
-        {% for holiday in filtered_holidays %}
-        <div class="holiday">
-            <h4>{{ holiday.name }}</h4>
-            <p>Date: {{ holiday.date }}</p>
-            <p>Description: {{ holiday.description }}</p>
-        </div>
-        {% endfor %}
-        {% endif %}
-    </div>
-    <div id="calendar">
+    </div> 
+    <div id="calendar" class="calendar">
         {% for holiday in holidays %}
         <div class="holiday">
-            <h4>{{ holiday[1] }}</h4>
-            <p>Date: {{ holiday[2] }}</p>
+            <h4>{{ holiday[2] }}</h4>
+            <p>Date: {{ holiday[1] }}</p>
             <p>Description: {{ holiday[3] }}</p>
-            <p>Likes: {{ holiday[4] }}</p>
+            <p>Location: {{ holiday[5] }}</p>
+            <p>Likes: {{ holiday[0] }}</p>
 
-           
+        
             <form action="{{ url_for('like_holiday', holiday_id=holiday[0]) }}" method="post">
                 <button type="submit">Like</button>
+            </form> 
             <form action="{{ url_for('share_holiday', holiday_id=holiday[0]) }}" method="post">
                     <button type="submit">Share</button>
+            </form> 
             <form action="{{ url_for('edit_holiday', id=holiday[0]) }}" method="get" style="display: inline;">
                 <button type="submit">Edit</button>
             </form>
             <!-- Delete button -->
             <form action="{{ url_for('delete_holiday', id=holiday[0]) }}" method="post" style="display: inline;">
                 <button type="submit" onclick="return confirm('Are you sure you want to delete this holiday?')">Delete</button>
-            </form>           
-        </div>
+            </form>  
+          
+        </div>         
         {% endfor %}
     </div>
     <div id="pagination">
