--- a/templates/edit.html
+++ b/templates/edit.html
@@ -15,7 +15,7 @@
         <label for="description">Description:</label><br>
         <textarea id="description" name="description" rows="4" cols="50">{{ holiday[3] }}</textarea><br>
         <label for="location">Location:</label><br>
-        <input type="text" id="Location" name="name" value="{{ holiday[5] }}"><br>
+        <input type="text" id="Location" name="location" value="{{ holiday[5] }}"><br>
         <input type="submit" value="Update">
     </form>
 </body>
