allowed 1 like to 1 username & added a sign out link

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
         <p>Date: {{ holiday[1] }}</p>
         <p>Description: {{ holiday[3] }}</p>
         <p>Location: {{ holiday[5] }}</p>
+        <p>Likes: {{ holiday[4] }}</p>
 
         <form action="{{ url_for('like_holiday', holiday_id=holiday[0]) }}" method="post">
             <button type="submit">Like</button>
