--- a/templates/signin.html
+++ b/templates/signin.html
@@ -24,6 +24,10 @@
         <div class="signup-link">
             <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign Up</a></p>
         </div>
+        <div class="signout-link">
+            <p>Want to sign out? <a href="{{ url_for('signout') }}">Sign Out</a></p>
+        </div>
     </div>
+
 </body>
 </html>
