--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     
     <div class="nav-links">
-            <a href="{{ url_for('signup') }}">Sign Up</a>
-            <a href="{{ url_for('signin') }}">Sign In</a>
+            <a href="{{ url_for('signup') }}">Sign Up</a> |
+            <a href="{{ url_for('signin') }}">Sign In</a> |
+            <a href="{{ url_for('signout') }}">Sign Out</a>
     </div>
 </head>
 <body>
