--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Holiday Entry</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <h1>Edit Holiday Entry</h1>
-    <form method="POST">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" value="{{ holiday[2] }}"><br>
-        <label for="date">Date:</label><br>
-        <input type="date" id="date" name="date" value="{{ holiday[1] }}"><br>
-        <label for="description">Description:</label><br>
-        <textarea id="description" name="description" rows="4" cols="50">{{ holiday[3] }}</textarea><br>
-        <label for="location">Location:</label><br>
-        <input type="text" id="Location" name="location" value="{{ holiday[5] }}"><br>
-        <input type="submit" value="Update">
-    </form>
+    <div class="con">
+    <div class="container">
+        <h1>Edit Holiday Entry</h1>
+        <form method="POST" class="holiday-form">
+            <div class="form-group">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name" value="{{ holiday[2] }}">
+            </div>
+            <div class="form-group">
+                <label for="date">Date:</label><br>
+                <input type="date" id="date" name="date" value="{{ holiday[1] }}">
+            </div>
+            <div class="form-group">
+                <label for="description">Description:</label><br>
+                <textarea id="description" name="description" rows="4" cols="50">{{ holiday[3] }}</textarea>
+            </div>
+            <div class="form-group">
+                <label for="location">Location:</label><br>
+                <input type="text" id="location" name="location" value="{{ holiday[5] }}">
+            </div>
+            <button type="submit">Update</button>
+        </form>
+    </div>
+    </con>
 </body>
 </html>
