--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,26 @@
 {% include 'index_header.html' %}
-
-
-
 {% for holiday in holidays %}
+
     <div class="holiday">
-        <h4>{{ holiday[2] }}</h4>
-        <p>Date: {{ holiday[1] }}</p>
-        <p>Description: {{ holiday[3] }}</p>
-        <p>Location: {{ holiday[5] }}</p>
-        <p>Likes: {{ holiday[4] }}</p>
-
-        <form action="{{ url_for('like_holiday', holiday_id=holiday[0]) }}" method="post">
-            <button type="submit">Like</button>
-        </form> 
-        <form action="{{ url_for('share_holiday', holiday_id=holiday[0]) }}" method="post">
-            <button type="submit">Share</button>
-        </form> 
-        <form action="{{ url_for('edit_holiday', id=holiday[0]) }}" method="get" style="display: inline;">
-            <button type="submit">Edit</button>
-        </form>
-        <!-- Delete button -->
-        <form action="{{ url_for('delete_holiday', id=holiday[0]) }}" method="post" style="display: inline;">
-            <button type="submit" onclick="return confirm('Are you sure you want to delete this holiday?')">Delete</button>
-        </form>  
-    </div>         
+        <div class="add-holiday">
+            <h4>{{ holiday[2] }}</h4>
+            <p>Date: {{ holiday[1] }}</p>
+            <p>Description: {{ holiday[3] }}</p>
+            <p>Location: {{ holiday[5] }}</p>
+            <p>Likes: {{ holiday[4] }}</p>
+        </div>
+            <div class="beauty">
+            <form action="{{ url_for('like_holiday', holiday_id=holiday[0]) }}" method="post">
+                <button type="submit">Like</button>
+            </form> 
+            <form action="{{ url_for('edit_holiday', id=holiday[0]) }}" method="get" style="display: inline;">
+                <button type="submit">Edit</button>
+            </form>
+            <form action="{{ url_for('delete_holiday', id=holiday[0]) }}" method="post" style="display: inline;">
+                <button type="submit" onclick="return confirm('Are you sure you want to delete this holiday?')">Delete</button>
+            </form>  
+        </div>
+    </div>  
+           
 {% endfor %}
-
 {% include 'index_footer.html' %}
