--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -15,17 +15,19 @@
 </head>
 <body>
     <h1>Holiday Calendar</h1>
-
-    <form action="{{ url_for('add_holiday') }}" method="post">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <label for="date">Date:</label>
-        <input type="date" id="date" name="date" required>
-        <label for="description">Description:</label>
-        <textarea id="description" name="description" required></textarea>
-        <label for="location">location:</label>
-        <input id="name" type="text" name="location" required>
-        <button type="submit">Add Holiday</button>
-    </form>
- 
+    
+            <form action="{{ url_for('add_holiday') }}" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="date">Date:</label>
+                <input type="date" id="date" name="date" required>
+                <label for="description">Description:</label>
+                <textarea id="description" name="description" required></textarea>
+                <label for="location">location:</label>
+                <input id="name" type="text" name="location" required>
+                 
+                <button type="submit">Add Holiday</button>
+            </div>
+            </form>
+    
     <div id="calendar" class="calendar">
