--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,35 +1,35 @@
+<!-- templates/index_header.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Holiday Entry</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>Holiday Calendar</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    
 </head>
 <body>
-    <div class="con">
-    <div class="container">
-        <h1>Edit Holiday Entry</h1>
-        <form method="POST" class="holiday-form">
-            <div class="form-group">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" value="{{ holiday[2] }}">
-            </div>
-            <div class="form-group">
-                <label for="date">Date:</label><br>
-                <input type="date" id="date" name="date" value="{{ holiday[1] }}">
-            </div>
-            <div class="form-group">
-                <label for="description">Description:</label><br>
-                <textarea id="description" name="description" rows="4" cols="50">{{ holiday[3] }}</textarea>
-            </div>
-            <div class="form-group">
-                <label for="location">Location:</label><br>
-                <input type="text" id="location" name="location" value="{{ holiday[5] }}">
-            </div>
-            <button type="submit">Update</button>
-        </form>
-    </div>
-    </con>
-</body>
-</html>
+    <div class="main-container"></div>
+    <h1>Holiday Calendar</h1>
+            <form  method="POST" class="holiday-main-form">
+                <div class="main">
+                    <label class="lab" for="name">Name:</label>
+                    <input class="in" type="text" id="name" name="name" value="{{ holiday[2] }}">
+                </div>
+                <div class="main">
+                    <label class="lab" for="date">Date:</label>
+                    <input class="in" type="date" id="date" name="date" value="{{ holiday[1] }}">
+                </div>
+                <div class="main">
+                    <label class="lab" for="description">Description:</label>
+                    <textarea class="in" id="description" name="description" value="{{ holiday[3] }}"></textarea>
+                </div>
+                <div class="main">
+                    <label class="lab" for="location">location:</label>
+                    <input class="in" id="name" type="text" name="location" value="{{ holiday[5] }}">
+                </div> 
+                <button class="but" type="submit">Submit</button>
+            </form>
+        </div>  
+    <div id="calendar" class="calendar">
+     
