feat: Added a flash meassage

--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -11,6 +11,15 @@
             <a href="{{ url_for('signup') }}">Sign Up</a> |
             <a href="{{ url_for('signin') }}">Sign In</a> |
             <a href="{{ url_for('signout') }}">Sign Out</a>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flash-messages">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        {% endwith %}
     </div>
 </head>
 <body>
