added an about page

--- a/templates/index_footer.html
+++ b/templates/index_footer.html
@@ -19,10 +19,8 @@
         </li>
         {% endif %}
     </ul>
-
-
-    {% endif %}
-</div>   
+    {% endif %} 
+    <p class="address">contact address: tesfaneshk222@gmail.com</p></div>   
 
 </body>
 </html>
