--- a/static/styles.css
+++ b/static/styles.css
@@ -211,3 +211,6 @@ edit-container {
     padding: 0;
     background: linear-gradient(to bottom, #cacac9, #20202036);; 
 }
+.address {
+    text-align: center;
+}
