--- a/templates/index_header.html
+++ b/templates/index_header.html
@@ -10,7 +10,8 @@
     <div class="nav-links">
             <a href="{{ url_for('signup') }}">Sign Up</a> |
             <a href="{{ url_for('signin') }}">Sign In</a> |
-            <a href="{{ url_for('signout') }}">Sign Out</a>
+            <a href="{{ url_for('signout') }}">Sign Out</a> |
+            <a href="{{ url_for('about') }}">About</a>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul class="flash-messages">
